tests/src/frontend/syntax/invalid/pattern_match_class_args_2.sk
class Foo(x : Int)


fun main(): String {
  Foo(5) match { Foo x -> "No" }
}
